--- a/server-api/src/main/resources/application.properties
+++ b/server-api/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/m4n_oop?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
